--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  qr_flutter: ^4.1.0
+  page_transition: '^2.0.9'
+  flutter_spinkit: ^5.2.0
   simple_icons: ^7.10.0
   logger: ^1.4.0
   flutter:
