--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  url_launcher: ^6.1.11
   qr_flutter: ^4.1.0
   page_transition: '^2.0.9'
   flutter_spinkit: ^5.2.0
